stylesheets/custom.css
.nav-pills{
	background-color: MidnightBlue;
	border-bottom: 2px solid #000057;
}

.nav-pills > li {
	padding: 5px;
}

.nav-pills > li > a {
	color: AliceBlue;

}

.nav-pills > li > a:hover {
	font-weight: bold;
	background-color: MidnightBlue;
}

.nav-pills > li.active > a,  .nav-pills > li.active > a:hover{
	color: MidnightBlue;
	font-weight: bold;
	background-color: AliceBlue;
}

.jumbotron {
	background-color: AliceBlue;
	border-bottom: 1px solid #E0E8EF;
}

.jumbotron > img {
	padding-left: 50px;
}

.project {
	background-color: AliceBlue;
	padding: 10px;
	border: 1px solid #D0D8DF;
	margin-bottom: 20px;
	margin-left: 5x;
	margin-right: 5px;
}

.project img {
	width: 100%;
}

